--- a/Nivel02/ormconfig.json
+++ b/Nivel02/ormconfig.json
@@ -1,10 +1,10 @@
 {
   "type": "postgres",
-  "host": "192.168.99.100",
-  "port": 5433,
+  "host": "localhost",
+  "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "gostack_gobarbarber",
+  "database": "gostack_gobarber",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
